test/errors/not_implemented_yet.aw
// error not_implemented_yet.aw:1:0: Not implemented yet: variadic functions.
func variadic(var...)
{
}
